<resources>
    <string name="app_name">BD Reminder</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="tasksButton">Tasks</string>
    <string name="birthdaysButton">BirthDays</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="newtext">New</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="hour">Hour:</string>
    <string name="type">Type:</string>

    <string-array name="tipos">
        <item>Event</item>
        <item>Birthday</item>
    </string-array>
</resources>